fix: adjusted dependencies