@@ -1,10 +1,13 @@
+import com.github.jengelman.gradle.plugins.shadow.tasks.ShadowJar
 import com.google.protobuf.gradle.id
 
 plugins {
     id("java")
+    id("io.micronaut.aot") version "4.4.0"
     id("io.micronaut.application") version "4.4.0"
     id("io.micronaut.test-resources") version "4.4.0"
     id("com.google.protobuf") version "0.9.4"
+    id("io.github.goooler.shadow") version "8.1.7"
 }
 
 group = "tech.code0"
@@ -15,15 +18,19 @@ repositories {
 }
 
 dependencies {
-
+    annotationProcessor("io.micronaut:micronaut-http-validation")
     annotationProcessor("io.micronaut.serde:micronaut-serde-processor")
-    implementation("io.micronaut:micronaut-discovery-core")
-    implementation("io.micronaut.grpc:micronaut-grpc-runtime")
+    implementation("com.oracle.coherence.ce:coherence")
+    implementation("com.oracle.coherence.ce:coherence-java-client")
     implementation("io.micronaut.rabbitmq:micronaut-rabbitmq")
     implementation("io.micronaut.redis:micronaut-redis-lettuce")
     implementation("io.micronaut.serde:micronaut-serde-jackson")
-    implementation("javax.annotation:javax.annotation-api")
+    compileOnly("io.micronaut:micronaut-http-client")
     runtimeOnly("ch.qos.logback:logback-classic")
+    testImplementation("io.micronaut:micronaut-http-client")
+
+    implementation("javax.annotation:javax.annotation-api:1.3.2")
+    implementation("com.google.protobuf:protobuf-java:4.27.1")
 
     implementation("com.gitlab.taucher2003.t2003-utils:log:1.1-beta.13")
     compileOnly("org.projectlombok:lombok:1.18.32")
@@ -32,11 +39,11 @@ dependencies {
 }
 
 application {
-    mainClass = "tech.code0.AquilaApplication"
+    mainClass = "tech.code0.AquilaServer"
 }
 java {
-    sourceCompatibility = JavaVersion.toVersion("22")
-    targetCompatibility = JavaVersion.toVersion("22")
+    sourceCompatibility = JavaVersion.toVersion("21")
+    targetCompatibility = JavaVersion.toVersion("21")
 }
 
 sourceSets {
@@ -48,20 +55,9 @@ sourceSets {
     }
 }
 
-micronaut {
-    testRuntime("junit5")
-    processing {
-        incremental(true)
-        annotations("tech.code0.*")
-    }
-    testResources {
-        sharedServer = true
-    }
-}
-
 protobuf {
     protoc {
-        artifact = "com.google.protobuf:protoc:4.27.0"
+        artifact = "com.google.protobuf:protoc:4.27.1"
     }
 
     plugins {
@@ -79,10 +75,36 @@ protobuf {
     }
 }
 
-tasks.withType<JavaCompile> {
-    options.compilerArgs.add("--enable-preview")
+micronaut {
+    runtime("netty")
+    testRuntime("junit5")
+    processing {
+        incremental(true)
+        annotations("tech.code0.*")
+    }
+    testResources {
+        sharedServer = true
+    }
+    aot {
+        optimizeServiceLoading = false
+        convertYamlToJava = false
+        precomputeOperations = true
+        cacheEnvironment = true
+        optimizeClassLoading = true
+        deduceEnvironment = true
+        optimizeNetty = true
+        replaceLogbackXml = true
+    }
+}
+
+tasks.named<ShadowJar>("shadowJar") {
+    manifest {
+        attributes(
+            "Main-Class" to "tech.code0.AquilaServer"
+        )
+    }
 }
 
 tasks.named<io.micronaut.gradle.docker.NativeImageDockerfile>("dockerfileNative") {
-    jdkVersion = "22"
+    jdkVersion = "21"
 }
